--- a/frontend/account_registration.html
+++ b/frontend/account_registration.html
@@ -3,140 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduConnectGPT - Đăng nhập</title>
-    <head>
+    <title>Đăng ký tài khoản</title>
     <link rel="stylesheet" href="css/account_registration.css">
 </head>
-</head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="images/Educonnect_logo.png" alt="Logo EduConnectGPT">
-        </div>
-    </header>
+    <div class="container">
+        <h1>Đăng ký tài khoản mới</h1>
 
-    <div class="main-content">
-        <div class="registration-container">
-            <h2 class="registration-header">Đăng ký tài khoản học sinh</h2>
-
-            <form id="registration-form">
-                <!-- Thông tin đăng nhập -->
-                <div class="form-group">
-                    <label for="username" class="form-label">Tên đăng nhập *</label>
-                    <input type="text" id="username" class="form-control" required>
-                    <div class="error-message" id="username-error">Tên đăng nhập đã tồn tại hoặc không hợp lệ</div>
+        <div class="form-section">
+            <h2>Vui lòng điền đầy đủ thông tin</h2>
+            <form id="registrationForm">
+                <div class="input-group">
+                    <label for="username">Tên đăng nhập*</label>
+                    <input type="text" id="username" required>
                 </div>
-
-                <div class="form-group">
-                    <label for="password" class="form-label">Mật khẩu *</label>
-                    <input type="password" id="password" class="form-control" required>
-                    <div class="error-message" id="password-error">Mật khẩu phải có ít nhất 6 ký tự</div>
+                <div class="input-group">
+                    <label for="password">Mật khẩu* (tối thiểu 6 ký tự)</label>
+                    <input type="password" id="password" required>
                 </div>
-
-                <div class="form-group">
-                    <label for="confirm-password" class="form-label">Xác nhận mật khẩu *</label>
-                    <input type="password" id="confirm-password" class="form-control" required>
-                    <div class="error-message" id="confirm-password-error">Mật khẩu không khớp</div>
+                <div class="input-group">
+                    <label for="name">Họ và tên*</label>
+                    <input type="text" id="name" required>
                 </div>
-
-                <!-- Thông tin cá nhân -->
-                <div class="form-group">
-                    <label for="fullname" class="form-label">Họ và tên *</label>
-                    <input type="text" id="fullname" class="form-control" required>
+                <div class="input-group">
+                    <label for="birthDate">Ngày sinh*</label>
+                    <input type="date" id="birthDate" required>
                 </div>
-
-                <div class="form-group">
-                    <label for="birthdate" class="form-label">Ngày sinh *</label>
-                    <input type="date" id="birthdate" class="form-control" required>
+                <div class="input-group">
+                    <label for="gender">Giới tính*</label>
+                    <select id="gender" required>
+                        <option value="">Chọn giới tính</option>
+                        <option value="Male">Nam</option>
+                        <option value="Female">Nữ</option>
+                    </select>
                 </div>
-
-                <div class="form-group">
-                    <label class="form-label">Giới tính *</label>
-                    <div class="gender-options">
-                        <div class="gender-option">
-                            <input type="radio" id="male" name="gender" value="Male" checked>
-                            <label for="male">Nam</label>
-                        </div>
-                        <div class="gender-option">
-                            <input type="radio" id="female" name="gender" value="Female">
-                            <label for="female">Nữ</label>
-                        </div>
-                    </div>
+                <div class="input-group">
+                    <label for="email">Email*</label>
+                    <input type="email" id="email" required>
                 </div>
-
-                <div class="form-group">
-                    <label for="email" class="form-label">Email *</label>
-                    <input type="email" id="email" class="form-control" required>
-                    <div class="error-message" id="email-error">Email không hợp lệ hoặc đã được sử dụng</div>
+                <div class="input-group">
+                    <label for="address">Địa chỉ</label>
+                    <input type="text" id="address">
                 </div>
-
-                <div class="form-group">
-                    <label for="address" class="form-label">Địa chỉ</label>
-                    <input type="text" id="address" class="form-control">
+                <div class="input-group">
+                    <label for="introduction">Giới thiệu bản thân</label>
+                    <textarea id="introduction"></textarea>
                 </div>
-
-                <!-- Giới thiệu bản thân -->
-                <div class="form-group">
-                    <label for="introduction" class="form-label">Giới thiệu bản thân</label>
-                    <textarea id="introduction" class="form-control" rows="3"></textarea>
+                <div class="input-group">
+                    <label for="hobby">Sở thích</label>
+                    <input type="text" id="hobby">
                 </div>
-
-                <div class="form-group">
-                    <label for="hobby" class="form-label">Sở thích</label>
-                    <textarea id="hobby" class="form-control" rows="2"></textarea>
-                </div>
-
-                <button type="submit" class="register-btn">Đăng ký</button>
-
-                <p class="login-prompt">Đã có tài khoản? <a href="login.html" class="login-link">Đăng nhập ngay</a></p>
+                <button type="button" onclick="registerStudent()">Đăng ký</button>
             </form>
+            <div id="registrationResult"></div>
         </div>
     </div>
 
-    <footer>
-        <div class="footer-content">
-            <div class="footer-left">
-                <div class="footer-logo">
-                    <img src="images\Educonnect_logo.png" alt="Logo EduConnectGPT">
-                </div>
-                <p class="mission-statement">EduConnect - Kết nối kiến thức, vững bước vào tương lai."</p>
-                <p class="team-credit">—Đội ngũ EduConnect</p>
-            </div>
-
-            <div class="footer-links">
-                <ul>
-                    <li><a href="#">Tất cả trang</a></li>
-                    <li><a href="#">Tất cả khóa học</a></li>
-                    <li><a href="#">Liên hệ</a></li>
-                    <li><a href="#">Chính sách bảo mật</a></li>
-                    <li><a href="#">Chính sách hoàn trả</a></li>
-                    <li><a href="#">Về chúng tôi</a></li>
-                    <li><a href="#">Câu hỏi thường gặp</a></li>
-                    <li><a href="#">Điều khoản và điều kiện</a></li>
-                </ul>
-            </div>
-
-            <div class="payment-methods">
-                <div class="payment-icons">
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                </div>
-            </div>
-        </div>
-    </footer>
     <script src="js/account_registration.js"></script>
 </body>
 </html>
