--- a/frontend/home.html
+++ b/frontend/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduConnectGPT - Trang Chủ</title>
+    <title>EduConnect - Trang Chủ</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/home.css">
 </head>
@@ -137,59 +137,55 @@
     </div>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-left">
-                <div class="footer-logo">
-                     <!-- Make sure the path to your logo is correct -->
-                    <img src="images/Educonnect_logo.png" alt="Logo EduConnectGPT">
-                </div>
-                <p class="mission-statement">EduConnect - Kết nối kiến thức, vững bước vào tương lai.</p>
-                <p class="team-credit">— Đội ngũ EduConnect</p>
-            </div>
-
-            <div class="footer-links">
-                 <h3>Liên Kết Nhanh</h3> <!-- Added heading -->
-                <ul>
-                    <li><a href="#">Tất cả trang</a></li>
-                    <li><a href="#">Tất cả khóa học</a></li>
-                    <li><a href="#">Liên hệ</a></li>
-                    <li><a href="#">Chính sách bảo mật</a></li>
-                    <li><a href="#">Chính sách hoàn tiền và đổi trả</a></li>
-                    <li><a href="#">Về chúng tôi</a></li>
-                    <li><a href="#">Câu hỏi thường gặp</a></li>
-                    <li><a href="#">Điều khoản và Điều kiện</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-socials">
-                <h3>Theo Dõi Chúng Tôi</h3>
-                <div class="social-icons-list">
-                    <!-- Replace YOUR_LINK placeholders with actual links -->
-                    <!-- Make sure paths to social icons are correct -->
-                    <a href="YOUR_YOUTUBE_LINK" target="_blank" class="social-icon-item" title="YouTube">
-                        <img src="images/Youtube.jpg" alt="YouTube">
-                    </a>
-                    <a href="YOUR_FACEBOOK_LINK" target="_blank" class="social-icon-item" title="Facebook">
-                        <img src="images/facebook.jpg" alt="Facebook">
-                    </a>
-                    <a href="YOUR_LINKEDIN_LINK" target="_blank" class="social-icon-item" title="LinkedIn">
-                        <img src="images/linkedln.jpg" alt="LinkedIn">
-                    </a>
-                    <a href="YOUR_TIKTOK_LINK" target="_blank" class="social-icon-item" title="TikTok">
-                        <img src="images/tiktok.jpg" alt="TikTok">
-                    </a>
-                    <a href="YOUR_INSTAGRAM_LINK" target="_blank" class="social-icon-item" title="Instagram">
-                        <img src="images/insta.jpg" alt="Instagram">
-                    </a>
-                    <a href="YOUR_DISCORD_LINK" target="_blank" class="social-icon-item" title="Discord">
-                        <img src="images/discord.jpg" alt="Discord">
-                    </a>
-                </div>
-            </div>
+      <div class="footer-grid">
+        <div class="footer-left">
+          <div class="footer-logo">
+            <img src="images/Educonnect_logo.png" alt="Logo EduConnectGPT">
+          </div>
+          <p class="mission-statement">EduConnect - Kết nối kiến thức, vững bước vào tương lai.</p>
+          <p class="team-credit">— Đội ngũ EduConnect</p>
         </div>
+        <div class="footer-links">
+          <h3>Liên Kết Nhanh</h3>
+          <ul>
+            <li><a href="#">Tất cả trang</a></li>
+            <li><a href="#">Tất cả khóa học</a></li>
+            <li><a href="#">Liên hệ</a></li>
+            <li><a href="#">Chính sách bảo mật</a></li>
+            <li><a href="#">Chính sách hoàn tiền và đổi trả</a></li>
+            <li><a href="#">Về chúng tôi</a></li>
+            <li><a href="#">Câu hỏi thường gặp</a></li>
+            <li><a href="#">Điều khoản và Điều kiện</a></li>
+          </ul>
+        </div>
+        <div class="footer-socials">
+          <h3>Theo Dõi Chúng Tôi</h3>
+          <div class="social-icons-list">
+            <a href="YOUR_YOUTUBE_LINK" target="_blank" class="social-icon-item" title="YouTube">
+              <img src="images/Youtube.jpg" alt="YouTube">
+            </a>
+            <a href="YOUR_FACEBOOK_LINK" target="_blank" class="social-icon-item" title="Facebook">
+              <img src="images/facebook.jpg" alt="Facebook">
+            </a>
+            <a href="YOUR_LINKEDIN_LINK" target="_blank" class="social-icon-item" title="LinkedIn">
+              <img src="images/linkedln.jpg" alt="LinkedIn">
+            </a>
+            <a href="YOUR_TIKTOK_LINK" target="_blank" class="social-icon-item" title="TikTok">
+              <img src="images/tiktok.jpg" alt="TikTok">
+            </a>
+            <a href="YOUR_INSTAGRAM_LINK" target="_blank" class="social-icon-item" title="Instagram">
+              <img src="images/insta.jpg" alt="Instagram">
+            </a>
+            <a href="YOUR_DISCORD_LINK" target="_blank" class="social-icon-item" title="Discord">
+              <img src="images/discord.jpg" alt="Discord">
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        &copy; 2025 EduConnect. All rights reserved.
+      </div>
     </footer>
-
-
     <script src="js/home.js"></script>
 </body>
 </html>
