--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -227,51 +227,54 @@
     </main>
 
     <footer>
-        <div class="footer-section footer-logo">
-            <img src="images/Educonnect_logo.png" alt="Logo EduConnect">
-            <div class="footer-tagline">
-                Kết nối kiến thức,<br>
-                tiến vững chắc vào tương lai.
-            </div>
+      <div class="footer-grid">
+        <div class="footer-left">
+          <div class="footer-logo">
+            <img src="images/Educonnect_logo.png" alt="Logo EduConnectGPT">
+          </div>
+          <p class="mission-statement">EduConnect - Kết nối kiến thức, vững bước vào tương lai.</p>
+          <p class="team-credit">— Đội ngũ EduConnect</p>
         </div>
-        <div class="footer-section footer-links">
-             <h3>Liên kết nhanh</h3>
-            <a href="#">Trang chủ</a>
-            <a href="#">Khóa học</a>
-            <a href="#">Về chúng tôi</a>
-            <a href="#">Liên hệ</a>
-            <a href="#">Câu hỏi thường gặp</a>
+        <div class="footer-links">
+          <h3>Liên Kết Nhanh</h3>
+          <ul>
+            <li><a href="#">Tất cả trang</a></li>
+            <li><a href="#">Tất cả khóa học</a></li>
+            <li><a href="#">Liên hệ</a></li>
+            <li><a href="#">Chính sách bảo mật</a></li>
+            <li><a href="#">Chính sách hoàn tiền và đổi trả</a></li>
+            <li><a href="#">Về chúng tôi</a></li>
+            <li><a href="#">Câu hỏi thường gặp</a></li>
+            <li><a href="#">Điều khoản và Điều kiện</a></li>
+          </ul>
         </div>
-         <div class="footer-section footer-links">
-             <h3>Pháp lý</h3>
-             <a href="#">Chính sách Bảo mật</a>
-            <a href="#">Điều khoản và Điều kiện</a>
-            <a href="#">Chính sách Hoàn tiền</a>
+        <div class="footer-socials">
+          <h3>Theo Dõi Chúng Tôi</h3>
+          <div class="social-icons-list">
+            <a href="YOUR_YOUTUBE_LINK" target="_blank" class="social-icon-item" title="YouTube">
+              <img src="images/Youtube.jpg" alt="YouTube">
+            </a>
+            <a href="YOUR_FACEBOOK_LINK" target="_blank" class="social-icon-item" title="Facebook">
+              <img src="images/facebook.jpg" alt="Facebook">
+            </a>
+            <a href="YOUR_LINKEDIN_LINK" target="_blank" class="social-icon-item" title="LinkedIn">
+              <img src="images/linkedln.jpg" alt="LinkedIn">
+            </a>
+            <a href="YOUR_TIKTOK_LINK" target="_blank" class="social-icon-item" title="TikTok">
+              <img src="images/tiktok.jpg" alt="TikTok">
+            </a>
+            <a href="YOUR_INSTAGRAM_LINK" target="_blank" class="social-icon-item" title="Instagram">
+              <img src="images/insta.jpg" alt="Instagram">
+            </a>
+            <a href="YOUR_DISCORD_LINK" target="_blank" class="social-icon-item" title="Discord">
+              <img src="images/discord.jpg" alt="Discord">
+            </a>
+          </div>
         </div>
-        <div class="footer-section footer-socials">
-            <h3>Theo dõi chúng tôi</h3>
-            <div class="social-icons-list">
-                <!-- Replace # with actual social media links -->
-                <a href="#" target="_blank" class="social-icon-item" title="YouTube">
-                    <img src="images/Youtube.jpg" alt="YouTube">
-                </a>
-                <a href="#" target="_blank" class="social-icon-item" title="Facebook">
-                    <img src="images/facebook.jpg" alt="Facebook">
-                </a>
-                <a href="#" target="_blank" class="social-icon-item" title="LinkedIn">
-                    <img src="images/linkedln.jpg" alt="LinkedIn">
-                </a>
-                <a href="#" target="_blank" class="social-icon-item" title="TikTok">
-                    <img src="images/tiktok.jpg" alt="TikTok">
-                </a>
-                <a href="#" target="_blank" class="social-icon-item" title="Instagram">
-                    <img src="images/insta.jpg" alt="Instagram">
-                </a>
-                <a href="#" target="_blank" class="social-icon-item" title="Discord">
-                    <img src="images/discord.jpg" alt="Discord">
-                </a>
-            </div>
-        </div>
+      </div>
+      <div class="footer-bottom">
+        &copy; 2025 EduConnect. All rights reserved.
+      </div>
     </footer>
     <script src="js/quiz.js"></script>
 </body>
