fix direction of deposit.js

--- a/frontend/deposit.html
+++ b/frontend/deposit.html
@@ -120,6 +120,6 @@
         &copy; 2025 EduConnect. All rights reserved.
       </div>
     </footer>
-  <script src="deposit.js"></script>
+  <script src="js/deposit.js"></script>
 </body>
 </html>
