fix balance cua user hien realtime

--- a/frontend/educonnectGPT.html
+++ b/frontend/educonnectGPT.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <div class="right-actions">
-            <div class="credit-icon">0.0 $</div>
+            <div class="credit-icon" style="cursor:pointer;">0.0 VND</div>
             <a href="/notification" class="notification-icon" style="text-decoration: none;">🔔</a>
             <div class="account-container">
                 <div class="account-icon">👤</div>
