--- a/frontend/notification.html
+++ b/frontend/notification.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <div class="right-actions">
-            <div class="credit-icon">0.0 $</div>
+            <div class="credit-icon" style="cursor:pointer;">0.0 VND</div>
             <a href="#" class="notification-icon" style="text-decoration: none;">🔔</a>
             <div class="account-container">
                 <div class="account-icon">👤</div>
