fix payos webhook

--- a/frontend/cancel.html
+++ b/frontend/cancel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Giao dịch bị hủy</title>
-  <link rel="stylesheet" href="result_payment.css">
+  <link rel="stylesheet" href="css/result_payment.css">
 </head>
 <body class="cancel">
   <div class="result-box">
