--- a/frontend/success.html
+++ b/frontend/success.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Thanh toán thành công</title>
-  <link rel="stylesheet" href="result_payment.css">
+  <link rel="stylesheet" href="css/result_payment.css">
 </head>
 <body class="success">
   <div class="result-box">
